# cpp-physics-engine

./: CMakeLists.txt  README.md  sources.md  workflowcl.md
archive/: CMakeLists.txt
archive/headers/: math-core.hpp
archive/oldsources/: oldsources.md
include/: core.hpp  math-core.hpp  precision.hpp
include/integrators/: euler.hpp
src/: main.cpp
tests/: test_vec3.cpp
